[package]
name = "blue-noise"
version = "0.1.1"
authors = ["Matthew Blode <m@blode.co>"]
edition = "2018"
description = "Black and white image dithering using blue noise"
documentation = "https://docs.rs/blue-noise"
readme = "README.md"
repository = "https://github.com/mblode/blue-noise/"
license = "MIT"
keywords = ["ditherpunk", "noise", "dithering", "dither", "blue-noise"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
image = "0.23.12"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
